--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-masonry-css": "^1.0.16",
+    "react-quill-new": "^3.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
