--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,13 +75,19 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
-      - name: Build APK
+      - name: Build universal APK
         run: flutter build apk --release
 
-      - name: Rename APK
+      - name: Build split APKs
+        run: flutter build apk --release --split-per-abi
+
+      - name: Rename APKs
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
           mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/anchor-${VERSION}.apk
+          mv build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk build/app/outputs/flutter-apk/anchor-${VERSION}-armeabi-v7a.apk
+          mv build/app/outputs/flutter-apk/app-arm64-v8a-release.apk build/app/outputs/flutter-apk/anchor-${VERSION}-arm64-v8a.apk
+          mv build/app/outputs/flutter-apk/app-x86_64-release.apk build/app/outputs/flutter-apk/anchor-${VERSION}-x86_64.apk
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
@@ -109,7 +115,7 @@ jobs:
         uses: mikepenz/release-changelog-builder-action@v5
         with:
           mode: "COMMIT"
-          configurationJson: ${{ github.workspace }}/.github/release-config.json
+          configuration: ".github/release-config.json"
           outputFile: release-notes.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
