--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +69,7 @@ dependencies:
   
   # Rich Text Editor
   flutter_quill: ^11.5.0
+  dart_quill_delta: ^10.8.3
 
 dev_dependencies:
   flutter_test:
