add OIDC authentication support (#51)
* feat (server): implement OIDC authentication support
- add OIDC configuration options to environment variables and admin settings.
- introduced OIDC client service for handling authentication flows.
- update README and documentation to reflect new OIDC features and configuration.

* feat (mobile): add OIDC authentication support

* fix(mobile): handle backward compatibility in OIDC configuration retrieval

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Copy this file to .env and adjust values as needed.
+
+APP_URL=http://localhost:3000  # Application URL for OIDC callback and redirects
 JWT_SECRET=supersecretkey # auto-generated and persisted in /data if not set
 PG_HOST=localhost # leave empty to use embedded Postgres
 PG_USER=anchor
@@ -9,3 +11,11 @@ PG_PORT=5432
 # Optional: Set to 'disabled', 'enabled', or 'review' to lock sign up mode.
 # If not set, admins can control it via the admin panel.
 # USER_SIGNUP=enabled
+
+### OIDC Authentication (optional)
+# OIDC_ENABLED=false
+# OIDC_PROVIDER_NAME="Pocket ID"
+# OIDC_ISSUER_URL=https://auth.example.com
+# OIDC_CLIENT_ID=your-client-id
+# OIDC_CLIENT_SECRET=your-client-secret  # Optional: omit for public client (PKCE)
+# DISABLE_INTERNAL_AUTH=false  # Hide local login form when OIDC is enabled
