--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -31,7 +31,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-environment=PORT="3001",DATABASE_URL="%(ENV_DATABASE_URL)s",JWT_SECRET="%(ENV_JWT_SECRET)s",NODE_ENV="production"
+environment=PORT="3001",DATABASE_URL="%(ENV_DATABASE_URL)s",JWT_SECRET="%(ENV_JWT_SECRET)s",NODE_ENV="production",OIDC_ENABLED="%(ENV_OIDC_ENABLED)s",OIDC_PROVIDER_NAME="%(ENV_OIDC_PROVIDER_NAME)s",OIDC_ISSUER_URL="%(ENV_OIDC_ISSUER_URL)s",OIDC_CLIENT_ID="%(ENV_OIDC_CLIENT_ID)s",OIDC_CLIENT_SECRET="%(ENV_OIDC_CLIENT_SECRET)s",DISABLE_INTERNAL_AUTH="%(ENV_DISABLE_INTERNAL_AUTH)s",APP_URL="%(ENV_APP_URL)s"
 
 ; Web - Next.js frontend
 [program:web]
