--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -67,7 +67,8 @@ dependencies:
   image_picker: ^1.1.2
   cached_network_image: ^3.4.1
   package_info_plus: ^8.1.3
-  
+  flutter_appauth: ^11.0.0
+
   # Rich Text Editor
   flutter_quill: ^11.5.0
   dart_quill_delta: ^10.8.3
