--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^17.2.3",
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
+    "openid-client": "^6.8.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
